Fixed menu item grid overflow issue

--- a/src/App/Pages/Menu/MenuCategories/MenuCategories.css
+++ b/src/App/Pages/Menu/MenuCategories/MenuCategories.css
@@ -1,5 +1,4 @@
 #menu-categories-section{
-    position: absolute;
     width: 100%;
     margin: 0;
     padding: 2em 0 0 0;
@@ -13,7 +12,9 @@
 
 #menu-categories-list{
     display: grid;
-    grid-template: 20em 20em 20em 20em/ 1fr 1fr 1fr;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+    grid-auto-rows: max-content;
+    min-height: 100vh;
     margin: 0;
     padding: 0 5.5em;
 }
